--- a/rtlib/CMakeLists.txt
+++ b/rtlib/CMakeLists.txt
@@ -57,3 +57,6 @@ install (TARGETS bbque_rtlib LIBRARY
 install(DIRECTORY "${PROJECT_SOURCE_DIR}/include/bbque/utils"
 		DESTINATION "${BBQUE_PATH_HEADERS}"
 		FILES_MATCHING PATTERN "*.h")
+install(DIRECTORY "${PROJECT_SOURCE_DIR}/include/bbque/cpp11"
+		DESTINATION "${BBQUE_PATH_HEADERS}"
+		FILES_MATCHING PATTERN "*.h")
