--- a/bbque/res/CMakeLists.txt
+++ b/bbque/res/CMakeLists.txt
@@ -7,6 +7,7 @@ include_directories(
 # Add sources in the current directory to the target binary
 set (RESOURCES_SRC resources)
 set (RESOURCES_SRC resource_tree ${RESOURCES_SRC})
+set (RESOURCES_SRC usage ${RESOURCES_SRC})
 
 #Add as library
 add_library(bbque_resources STATIC ${RESOURCES_SRC})
