--- a/include/bbque/config.h.in
+++ b/include/bbque/config.h.in
@@ -28,6 +28,8 @@
  ******************************************************************************/
 
 #include <syslog.h>
+#define  __STDC_FORMAT_MACROS
+#include <inttypes.h>
 
 /** Use Boost Filesyste library version 3 */
 #define BOOST_FILESYSTEM_VERSION 3
