--- a/config/bosp_init.env.in
+++ b/config/bosp_init.env.in
@@ -126,9 +126,9 @@ cat <<EOF
 - Version.................... @GIT_SHA1@
 - Build type................. @CMAKE_BUILD_TYPE@
 - Build configuration:
-     RPC FIFOs............... @BBQUE_RPC_FIFO@
-     Test Platform Data...... @BBQUE_TEST_PLATFORM_DATA@
-     Performance Counters.... @BBQUE_RTLIB_PERF_SUPPORT@
+     RPC FIFOs............... @CONFIG_BBQUE_RPC_FIFO@
+     Test Platform Data...... @CONFIG_BBQUE_TEST_PLATFORM_DATA@
+     Performance Counters.... @CONFIG_BBQUE_RTLIB_PERF_SUPPORT@
 EOF
 echo -ne "$BOSPSH_DEFAULT"
 }
@@ -170,7 +170,7 @@ function bosp-build-debug {
 echo -ne "${BOSPSH_BLUE}"
 echo -e "*** Rebuilding [Debug] BOSP (with TPD support)"
 echo -ne "$BOSPSH_DEFAULT"
-make BBQUE_CMAKE_OPTS="-DBBQUE_TEST_PLATFORM_DATA=ON" BUILD_TYPE="Debug" bbque
+make BUILD_TYPE="Debug" bbque
 }
 
 function bosp-build-release-tpd {
