--- a/include/bbque/config.h.in
+++ b/include/bbque/config.h.in
@@ -18,6 +18,15 @@
 #ifndef BBQUE_CONFIG_H_
 #define BBQUE_CONFIG_H_
 
+/*******************************************************************************
+ *                *** This file has been auto-generated ***
+ *
+ * To update the BarbequeRTRM building configuration, please run the
+ * configuration menu using the command:
+ *   make menuconfig
+ * from the BOSP installation directory
+ ******************************************************************************/
+
 #include <syslog.h>
 
 /** Use Boost Filesyste library version 3 */
@@ -81,16 +90,16 @@
  ******************************************************************************/
 
 /** Use FIFO based RPC channel */
-#cmakedefine BBQUE_RPC_FIFO
+#cmakedefine CONFIG_BBQUE_RPC_FIFO
 
 /** Use Test Platform Data */
-#cmakedefine BBQUE_TEST_PLATFORM_DATA
+#cmakedefine CONFIG_BBQUE_TEST_PLATFORM_DATA
 
 /** Performance Counters Support */
-#cmakedefine BBQUE_RTLIB_PERF_SUPPORT
+#cmakedefine CONFIG_BBQUE_RTLIB_PERF_SUPPORT
 
 /** Enabled YaMS Scheduling policy parallel execution */
-#cmakedefine BBQUE_SP_YAMS_PARALLEL
+#cmakedefine CONFIG_BBQUE_SP_YAMS_PARALLEL
 
 /** Target platform support C++11 required features */
 #cmakedefine CONFIG_TARGET_SUPPORT_CPP11
