--- a/rtlib/CMakeLists.txt
+++ b/rtlib/CMakeLists.txt
@@ -35,8 +35,15 @@ target_link_libraries(
 	bbque_rtlib
 	bbque_utils
 	${Boost_LIBRARIES}
+)
+
+# Add "Generic-Linux" specific flags
+if (CONFIG_TARGET_LINUX)
+target_link_libraries(
+	bbque_rtlib
 	-ldl -lrt
 )
+endif (CONFIG_TARGET_LINUX)
 
 # Use link path ad RPATH
 set_property (TARGET bbque_rtlib PROPERTY
