--- a/bbque/CMakeLists.txt
+++ b/bbque/CMakeLists.txt
@@ -6,7 +6,7 @@ configure_file (
 )
 
 # Add "barbeque" specific flags
-set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --std=c++0x")
+#set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --std=c++0x")
 # This flags should be used only when a monolitic build profile will be defined
 #set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -ffunction-sections -fdata-sections")
 #set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wl,--gc-sections")
