[KConfig] Adding 64bits target flag
This adds a KConfig option to define if the target platform is 32 or 64 bits.

Signed-off-by: Patrick Bellasi <derkling@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -104,6 +104,12 @@ set (BBQUE_TARGET_OS "Generic-Linux")
 set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC")
 endif (CONFIG_TARGET_LINUX)
 
+# Check target bitness
+set (BBQUE_TARGET_ARCH 32)
+if (CMAKE_SIZEOF_VOID_P EQUAL 8)
+  set (BBQUE_TARGET_ARCH 64)
+endif (CMAKE_SIZEOF_VOID_P EQUAL 8)
+
 message("PRE SUBST Linker flags:" ${PLATFORM_EXE_LINKEROPTS})
 string(REPLACE @ = PLATFORM_EXE_LINKEROPTS "${PLATFORM_EXE_LINKEROPTS}")
 set (CMAKE_EXE_LINKER_FLAGS "${PLATFORM_EXE_LINKEROPTS}")
