[YM] Add support for Synchronous calls
A KConfig compilation flag has been added which allows to choose between
synchronous (i.e. without dedicated threads) and asynchronous calls for
the protocol messages.
Synchronous calls are preferable on platforms where we do not expect an
high level of applications contention, e.g. Android targets.

Signed-off-by: Patrick Bellasi <derkling@gmail.com>

--- a/Kconfig
+++ b/Kconfig
@@ -61,4 +61,21 @@ config BBQUE_SP_YAMS_PARALLEL
   Select this option if you plan to run the BarbequeRTRM daemon on a multi-core
   host machine.
 
+comment "Synchronization Policies Configuration"
+
+config BBQUE_YP_SASB_ASYNC
+  bool "SASB asynchronous calls"
+  default n if TARGET_ANDROID
+  default y
+  ---help---
+  Build the SASM policy with support for asynchronous protocol calls.
+
+  By selecting this option, the synchronization protocol is executed with
+  asynchronous calls which means that the interaction with applications to be
+  re-configured is parallelized, i.e. each protocol requets is managed by a
+  dedicated thread and all them runs in parallel.
+
+  Select this option if you plan to run the BarbequeRTRM daemon on a multi-core
+  host machine and with a average high number of concurrent applications.
+
 endmenu # Advanced options
