--- a/include/bbque/config.h.in
+++ b/include/bbque/config.h.in
@@ -106,6 +106,9 @@
 /** Enabled YaMS Scheduling policy parallel execution */
 #cmakedefine CONFIG_BBQUE_SP_YAMS_PARALLEL
 
+/** Enabled SASB Synchronization policy asynchronous calls */
+#cmakedefine CONFIG_BBQUE_YP_SASB_ASYNC
+
 /** Target platform support C++11 required features */
 #cmakedefine CONFIG_TARGET_SUPPORT_CPP11
 
