[Android] Add Android specific compilation options
This patch add a set of required configuration and compilation options
which are required for a successful compilation using the Android NDK.

Signed-off-by: Patrick Bellasi <derkling@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -104,6 +104,13 @@ set (BBQUE_TARGET_OS "Generic-Linux")
 set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC")
 endif (CONFIG_TARGET_LINUX)
 
+# Add "Android-Linux" specific flags
+if (CONFIG_TARGET_ANDROID)
+set (BBQUE_TARGET_OS "Android-Linux")
+set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=gnu++0x -I../../../out/include -D__ARM_ARCH_5__ -D__ARM_ARCH_5T__ -D__ARM_ARCH_5E__ -D__ARM_ARCH_5TE__ -D__STDINT_LIMITS -D__BIONIC__ -Wno-psabi -march=armv5te -mtune=xscale -msoft-float -fexceptions -frtti -mthumb -fomit-frame-pointer -fno-strict-aliasing -finline-limit=64 -DANDROID  -Wa,--noexecstack")
+# -ffunction-sections -fdata-sections -Wl,--gc-sections - REMOVED becaus of missing symbols
+endif (CONFIG_TARGET_ANDROID)
+
 # Check target bitness
 set (BBQUE_TARGET_ARCH 32)
 if (CMAKE_SIZEOF_VOID_P EQUAL 8)
