[RPC_FIFO] Add Boost dependency library
This dependency is required for a successful loading of the .so when running
on an Android target.

Signed-off-by: Patrick Bellasi <derkling@gmail.com>

--- a/plugins/rpc/CMakeLists.txt
+++ b/plugins/rpc/CMakeLists.txt
@@ -2,11 +2,15 @@
 #----- Add "RPC FIFO" target dynamic library
 set(PLUGIN_RPC_FIFO_SRC  fifo_rpc fifo_plugin)
 add_library(bbque_rpc_fifo MODULE ${PLUGIN_RPC_FIFO_SRC})
+target_link_libraries(
+	bbque_rpc_fifo
+	${Boost_LIBRARIES}
+)
 install(TARGETS bbque_rpc_fifo LIBRARY
 		DESTINATION ${BBQUE_PATH_PLUGINS}
 		COMPONENT BarbequeRTRM)
 
-#----- Add "testing" specific flags
+#----- Add "RPC FIFO" specific flags
 set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -ffunction-sections -fdata-sections")
 set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wl,--gc-sections")
 
