[SchedPol_YaMSSCHEDPOL] Add Boost dependency library
This dependency is required for a successful loading of the .so when running
on an Android target.

Signed-off-by: Patrick Bellasi <derkling@gmail.com>

--- a/plugins/schedpol/CMakeLists.txt
+++ b/plugins/schedpol/CMakeLists.txt
@@ -10,6 +10,10 @@ endif (CMAKE_BUILD_TYPE STREQUAL "Debug")
 #----- Add "yamca" target static library
 set(PLUGIN_YAMCA_SRC  yamca_schedpol yamca_plugin)
 add_library(bbque_schedpol_yamca MODULE ${PLUGIN_YAMCA_SRC})
+target_link_libraries(
+	bbque_schedpol_yamca
+	${Boost_LIBRARIES}
+)
 install(TARGETS bbque_schedpol_yamca LIBRARY
 		DESTINATION ${BBQUE_PATH_PLUGINS}
 		COMPONENT BarbequeRTRM)
@@ -28,6 +32,7 @@ add_library(bbque_schedpol_yams MODULE ${PLUGIN_YAMS_SRC})
 target_link_libraries(
 	bbque_schedpol_yams
 	bbque_sched_metrics
+	${Boost_LIBRARIES}
 )
 
 # Install
