[LoggerAndroid 2/2] Add plugin compilation
The Android logger is build as a static plugin, to be linked to the
BarbequeRTRM when compiled for Android targets.

Signed-off-by: Patrick Bellasi <derkling@gmail.com>

--- a/plugins/logger/CMakeLists.txt
+++ b/plugins/logger/CMakeLists.txt
@@ -1,4 +1,7 @@
 
+################################################################################
+# Log4CPP Logger
+################################################################################
 
 if (CONFIG_EXTERNAL_LOG4CPP)
 
@@ -23,4 +26,30 @@ set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wl,--gc-sections")
 target_link_libraries(bbque_logger_log4cpp ${LOG4CPP_LIBRARIES})
 
 endif (CONFIG_EXTERNAL_LOG4CPP)
+
+
+################################################################################
+# Android Logger
+################################################################################
+
+if (CONFIG_TARGET_ANDROID)
+
+## Add compilation dependencies
+#include_directories(${log4cpp_INCLUDE_DIRS})
+
+## Add linking dependencies
+#link_directories(${log4cpp_LIBRARY_DIRS})
+
+#----- Add target static library
+set(PLUGIN_ANDROID_SRC  android_logger android_plugin)
+add_library(bbque_logger_android STATIC ${PLUGIN_ANDROID_SRC})
+
+#----- Add library specific flags
+set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -ffunction-sections -fdata-sections")
+set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wl,--gc-sections")
+
+#----- Linking dependencies
+target_link_libraries(bbque_logger_android "-llog")
+
+endif (CONFIG_TARGET_ANDROID)
 
