[BuildSystem] Use AndroidLogger for Android targets
When BarbequeRTRM is compiled for Android targets, the AndroidLogger implementation
of the LoggerIF is linked.

Signed-off-by: Patrick Bellasi <derkling@gmail.com>

--- a/bbque/CMakeLists.txt
+++ b/bbque/CMakeLists.txt
@@ -113,6 +113,7 @@ if (CONFIG_TARGET_ANDROID)
 target_link_libraries(
 	barbeque
 	-Wl,-whole-archive bbque_cpp11 -Wl,-no-whole-archive
+	-Wl,-whole-archive bbque_logger_android -Wl,-no-whole-archive
 )
 endif (CONFIG_TARGET_ANDROID)
 
