[Configure] Change the set of scheduling parameters
From previous tests this set of parameters has shown a more balanced
behavior between assign the highest value AWM to the applications and to
guarantee a good level of fairness.

Signed-off-by: Giuseppe Massari <joe.massanga@gmail.com>

--- a/config/bbque.conf.in
+++ b/config/bbque.conf.in
@@ -37,18 +37,20 @@
 # Global parameters [0,100]
 msl.pe               = 75
 msl.mem              = 90
-awmvalue.weight      = 10
-reconfig.weight      = 2
-congestion.weight    = 10
+awmvalue.weight      = 20
+reconfig.weight      = 5
+congestion.weight    = 5
 fairness.weight      = 10
 # Contribute specific parameters
+awmvalue.penalty.pe    = 100
+awmvalue.penalty.mem   = 100
 reconfig.migfact       = 5
 congestion.expbase     = 2
 congestion.penalty.pe  = 25
 congestion.penalty.mem = 25
-fairness.expbase       = 2
-fairness.penalty.pe    = 0
-fairness.penalty.mem   = 0
+fairness.expbase       = 5
+fairness.penalty.pe    = 10
+fairness.penalty.mem   = 10
 
 ################################################################################
 # Synchronization Manager Options
