--- a/Doxyfile.in
+++ b/Doxyfile.in
@@ -44,7 +44,7 @@ PROJECT_BRIEF          = "An highly modular and extensible run-time resource man
 # exceed 55 pixels and the maximum width should not exceed 200 pixels. 
 # Doxygen will copy the logo to the output directory.
 
-PROJECT_LOGO           = ${PROJECT_SOURCE_DIR}/doxygen/BarbequeLogo.png
+PROJECT_LOGO           = "${PROJECT_SOURCE_DIR}/doxygen/images/LogoBarbequeRTRM.png"
 
 # The OUTPUT_DIRECTORY tag is used to specify the (relative or absolute) 
 # base path where the generated documentation will be put. 
