--- a/Doxyfile.in
+++ b/Doxyfile.in
@@ -51,7 +51,7 @@ PROJECT_LOGO           = "${PROJECT_SOURCE_DIR}/doxygen/images/LogoBarbequeRTRM.
 # If a relative path is entered, it will be relative to the location 
 # where doxygen was started. If left blank the current directory will be used.
 
-OUTPUT_DIRECTORY       = Documentation
+OUTPUT_DIRECTORY       = ${CMAKE_INSTALL_PREFIX}/share/bbque
 
 # If the CREATE_SUBDIRS tag is set to YES, then doxygen will create 
 # 4096 sub-directories (in 2 levels) under the output directory of each output 
