--- a/rtlib/CMakeLists.txt
+++ b/rtlib/CMakeLists.txt
@@ -12,6 +12,7 @@ configure_file (
 )
 
 # Add "barbeque" specific flags
+set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DBBQUE_RTLIB")
 set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -ffunction-sections -fdata-sections")
 set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wl,--gc-sections")
 
