--- a/bbque/CMakeLists.txt
+++ b/bbque/CMakeLists.txt
@@ -65,7 +65,7 @@ set (BARBEQUE_SRC platform_services dynamic_library ${BARBEQUE_SRC})
 set (BARBEQUE_SRC plugin_manager modules_factory ${BARBEQUE_SRC})
 set (BARBEQUE_SRC resource_manager application_manager ${BARBEQUE_SRC})
 set (BARBEQUE_SRC resource_accounter ${BARBEQUE_SRC})
-set (BARBEQUE_SRC application_proxy rpc_proxy ${BARBEQUE_SRC})
+set (BARBEQUE_SRC application_proxy rpc_proxy rpc_messages ${BARBEQUE_SRC})
 set (BARBEQUE_SRC platform_proxy ${BARBEQUE_SRC})
 set (BARBEQUE_SRC signals_manager scheduler_manager ${BARBEQUE_SRC})
 set (BARBEQUE_SRC synchronization_manager ${BARBEQUE_SRC})
