--- a/include/bbque/config.h.in
+++ b/include/bbque/config.h.in
@@ -109,6 +109,9 @@
 /** Performance Counters Support */
 #cmakedefine CONFIG_BBQUE_RTLIB_PERF_SUPPORT
 
+/** CGroups Support */
+#cmakedefine CONFIG_BBQUE_RTLIB_CGROUPS_SUPPORT
+
 /** Enabled YaMS Scheduling policy parallel execution */
 #cmakedefine CONFIG_BBQUE_SP_YAMS_PARALLEL
 
